--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "edinburghsff",
-  "description": "Edinburgh SFF Ghost Theme",
-  "demo": "https://edinburgsff.com",
+  "name": "shellbryson",
+  "description": "Shell Bryson Ghost Theme",
+  "demo": "https://shellbryson.com",
   "version": "0.0.1",
   "engines": {
     "ghost": ">=2.0.0",
@@ -37,13 +37,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/shellbryson/edinburghsff"
+    "url": "https://github.com/shellbryson/shellbryson"
   },
   "devDependencies": {
-    "autoprefixer": "9.4.10",
+    "autoprefixer": "^9.6",
     "cssnano": "4.1.10",
-    "gscan": "^2.7.0",
-    "gulp": "4.0.0",
+    "gscan": "^3.0",
+    "gulp": "^4.0",
     "gulp-livereload": "4.0.1",
     "gulp-postcss": "8.0.0",
     "gulp-sass": "^4.0.2",
@@ -56,6 +56,19 @@
     "postcss-custom-properties": "8.0.9",
     "postcss-easy-import": "3.0.0"
   },
+  "browserslist": [
+    "> 1%",
+    "ie >= 8",
+    "edge >= 15",
+    "ie_mob >= 10",
+    "ff >= 45",
+    "chrome >= 45",
+    "safari >= 7",
+    "opera >= 23",
+    "ios >= 7",
+    "android >= 4",
+    "bb >= 10"
+  ],
   "config": {
     "posts_per_page": 15,
     "image_sizes": {
