feat(templates): add blog template support

--- a/routes.yaml
+++ b/routes.yaml
@@ -1,10 +1,7 @@
 routes:
+  /: home
 
 collections:
-  /:
-    permalink: /{slug}/
+  /blog/:
+    permalink: /blog/{slug}/
     template: index
-
-taxonomies:
-  tag: /tag/{slug}/
-  author: /author/{slug}/
